<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pasword_forgotten"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    tools:context="com.villasoftgps.movil.Act_ResetPassword">

    <controls.VillaTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblPasswordForgottenTitle"
        android:text="@string/lblPasswordForgotten"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:background="@drawable/bg_activity_title"
        android:layout_marginBottom="10dp"/>

    <controls.VillaTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblPasswordForgottenHint"
        android:text="@string/lblPasswordForgottenHint"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/lblPasswordForgottenTitle"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:maxHeight="50dp"
        android:id="@+id/tilEmail"
        android:background="@drawable/shapeedittext"
        android:padding="3dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/lblPasswordForgottenHint">
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress|textNoSuggestions"
            android:maxLines="1"
            android:gravity="center_horizontal|center_vertical"
            android:textAlignment="gravity"
            android:drawableLeft="@drawable/icon_email"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="5dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btnResetPassword"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnPasswordForgotten"
        android:textStyle="bold"
        android:background="@drawable/btn_bg_orange"
        android:layout_below="@+id/tilEmail"/>
</RelativeLayout>
