<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.villasoftgps.movil.Act_Login"
    android:background="@drawable/fondo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:id="@+id/imgLogo"
            android:layout_marginBottom="30dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilCedula"
            android:layout_below="@+id/imgLogo"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shapeedittext">
            <EditText
                android:id="@+id/txtCedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtCedula"
                android:inputType="number"
                android:maxLines="1"
                android:gravity="center_horizontal|center_vertical"
                android:textAlignment="gravity"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilClave"
            android:layout_below="@+id/tilCedula"
            android:background="@drawable/shapeedittext">
            <EditText
                android:id="@+id/txtClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtClave"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:gravity="center_horizontal|center_vertical"
                android:textAlignment="gravity"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/btnIngresar"
            android:textSize="16sp"
            android:layout_below="@+id/tilClave"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ingresar_al_sistema"/>
    </RelativeLayout>
</RelativeLayout>
