<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_personal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    tools:context="com.villasoftgps.movil.Act_RegisterPersonal">

    <controls.VillaTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblRegisterPersonalTitle"
        android:text="@string/lblRegisterPersonal"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:background="@drawable/bg_activity_title"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblRegisterPersonalTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linRegisterPersonal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilFirstName"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shapeedittext"
                >
                <EditText
                    android:id="@+id/txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtFirstName"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="gravity"
                    android:drawableLeft="@drawable/icon_user_edit"
                    android:drawableStart="@drawable/icon_user_edit"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilLastName"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shapeedittext">
                <EditText
                    android:id="@+id/txtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtLastName"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="gravity"
                    android:drawableLeft="@drawable/icon_user_edit"
                    android:drawableStart="@drawable/icon_user_edit"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPhoneNumber1"
                android:background="@drawable/shapeedittext"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/txtPhoneNumber1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPhoneNumber1"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="gravity"
                    android:drawableLeft="@drawable/icon_phone"
                    android:drawableStart="@drawable/icon_phone"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPhoneNumber2"
                android:background="@drawable/shapeedittext"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/txtPhoneNumber2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPhoneNumber2"
                    android:imeOptions="actionUnspecified"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="gravity"
                    android:drawableLeft="@drawable/icon_phone"
                    android:drawableStart="@drawable/icon_phone"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilAddress"
                android:background="@drawable/shapeedittext"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtAddress"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="gravity"
                    android:drawableLeft="@drawable/icon_address"
                    android:drawableStart="@drawable/icon_address"
                    android:drawablePadding="5dp"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btnRegisterPersonal"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:text="@string/send_register"
                android:textStyle="bold"
                android:background="@drawable/btn_bg_orange"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
