<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    tools:context="com.villasoftgps.movil.Act_ChangePassword">

    <controls.VillaTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblChangePasswordTitle"
        android:text="@string/lblChangePassword"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff"
        android:background="@drawable/bg_activity_title"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblChangePasswordTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linChangePassword" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPassword"
                android:background="@drawable/shapeedittext"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPassword"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="gravity"
                    android:drawableLeft="@drawable/icon_password"
                    android:drawableStart="@drawable/icon_password"
                    android:drawablePadding="5dp"
                    android:maxLength="15"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilPasswordConfirm"
                android:background="@drawable/shapeedittext"
                android:layout_marginBottom="10dp">
                <EditText
                    android:id="@+id/txtPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtPasswordConfirm"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:textAlignment="gravity"
                    android:drawableLeft="@drawable/icon_password_confirmation"
                    android:drawableStart="@drawable/icon_password_confirmation"
                    android:drawablePadding="5dp"
                    android:maxLength="15"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btnChangePassword"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:text="@string/btnChangePassword"
                android:textStyle="bold"
                android:background="@drawable/btn_bg_orange"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
